crates/zendriver-mcp/tests/snapshots/schema_snapshots__window_state_dto.snap
---
source: crates/zendriver-mcp/tests/schema_snapshots.rs
expression: "schema_for! (tools::window::WindowStateDto)"
---
$schema: "https://json-schema.org/draft/2020-12/schema"
title: WindowStateDto
description: "Wire mirror of [`zendriver::WindowState`]."
oneOf:
  - description: Normal (windowed) — the only state that may carry explicit geometry.
    type: string
    const: normal
  - description: Minimized to the OS taskbar / dock.
    type: string
    const: minimized
  - description: Maximized to fill the screen work area.
    type: string
    const: maximized
  - description: Fullscreen (chrome / OS decorations hidden).
    type: string
    const: fullscreen
